fix: stages row-gap

--- a/src/components/Main/HowItWorks/HowItWorks.css
+++ b/src/components/Main/HowItWorks/HowItWorks.css
@@ -87,7 +87,7 @@
   max-width: 371px;
 }
 
-@media (max-width: 1544px) {
+@media (max-width: 1264px) {
   .how-it-works {
     margin: 116px 0 0;
   }
